BUGFIX submit button not showing, add missing <select tag>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 #quiz-start {
   display: grid;
-  width: 500px;
+  width: 600px;
   background-color: rgba(128, 0, 128, 0.41);
   margin-left: 50vh;
   margin-top: 30vh;
